did some cleaning and fixed navbar issue of shifting when clickcing profile

--- a/frontend/src/components/MatchDetails/MatchDetail.css
+++ b/frontend/src/components/MatchDetails/MatchDetail.css
@@ -8,7 +8,7 @@
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
     right: clamp(1px, 1%, 30px);
-    width: clamp(200px, 46%, 1000px);
+    width: clamp(200px, 46vw, 3000px);
     margin-top: 20px;
     border-radius: 10px;
     padding: 20px;
